[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "minoruparksimulator"
version = "0.1.0"
[tool.poetry.dependencies]
pygame = "^1.9"
python = "^3.8"
websockets = "^8.1"
[tool.poetry.dev-dependencies]
